## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = netmd

netmd_SOURCES = \
	main.cc \
  libnetmd.c \
  libnetmd.h \
  NetMD.h \
  NetMD.cpp \
  timer.h \
  timer.cpp \
  clock.h \
  clock.cpp \
  misc.h \
  sleep.h \
  recording.h \
  recording.cpp \
  mutex.h \
  mutex.cpp \
  condition.h \
  condition.cpp \
  lock.h \
  sndfileout.h \
  sndfileout.cpp

netmd_LDFLAGS =

netmd_LDADD =

